Fixed alignment of comment buttons

--- a/static-src/scss/components/_comments.scss
+++ b/static-src/scss/components/_comments.scss
@@ -125,8 +125,9 @@ $author-image-size: 37px;
         float: right;
     }
 
-    .comment-footer-button {
+    .comment-footer-button, form {
         @include rem(margin-right, 15px);
+        display: inline-block;
 
         &:last-child {
             margin-right: 0;
